# smart-camera-hybrid-application

./: README.md  runtime_class.yaml  standup.sh  teardown.sh  test_hybrid.yaml  values.yaml
.github/workflows/: docker-image.yml
cortexm_console/: cortexm_console.c  readme.txt
rpmsg_cortexm_console_rtos/cortexm_console/: readme.txt
rpmsg_cortexm_console_rtos/linux_remote/: Dockerfile_mm  Dockerfile_mp  main_remote.c  readme.txt  rpmsg_cortexm_console_rtos_linux_remote_v1_00.xml
rpmsg_cortexm_console_rtos/linux_remote/armgcc/: CMakeLists.txt  build_log.txt  output.map
rpmsg_cortexm_console_rtos/linux_remote/armgcc_imx8mm/: CMakeLists.txt  Dockerfile  build_release.sh  clean.sh
rpmsg_cortexm_console_rtos/linux_remote/armgcc_imx8mp/: CMakeLists.txt  build_release.sh
rpmsg_cortexm_console_rtos/linux_remote/imx8mp/: main_remote.c  main_remote.c~  p.c  readme.txt  rpmsg_cortexm_console_rtos_linux_remote_v1_00.xml
rpmsg_cortexm_console_rtos/linux_remote/imx8mp/armgcc/: CMakeLists.txt  build_log.txt
